--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@vueuse/rxjs": "^13.1.0",
     "ant-design-vue": "^4.2.6",
+    "dexie": "^4.0.11",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
